Auto encryption of a $changeStream aggregation fails with obscure error

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.2.1, 4.3.1
    • Affects Version/s: 4.2.0-rc4
    • Component/s: None
    • Fully Compatible
    • ALL
    • v4.2
    • Query 2019-09-09, Query 2019-09-23
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      mongocryptd returns the following error message when given a $changeStream pipeline:

      {'ok': 0.0, 'errmsg': 'The $changeStream stage is only supported on replica sets', 'code': 40573, 'codeName': 'Location40573'}
      

      It would be nicer if it returned an error stating that the $changeStream stage is not supported with auto encryption.

      CC kevin.albertson.

            Assignee:
            Bernard Gorman
            Reporter:
            Shane Harvey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: