SERVER-42520 Set no-op replication co-ordinator on mongocryptd to allow parsing of change stream aggregations

GitOrigin-RevId: 89ae7560b6c9e93ed60b5b2c24e139218a6ea66c